--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Frontpage</title>
 </head>
 <body>
-    <h3>Welcome to my Website</h3>
+    <h1>Welcome to my Website</h1>
+
+    <h3>The time is unknown, live in the moment!</h3>
+
+
 
     <script src="./frontpage.js"></script>
 </body>
