Minutes displayed properly if one digit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Welcome to my Website</h1>
 
-    <h3>The time is unknown, live in the moment!</h3>
+    <h3>The time is:</h3>
 
 
 
