Time displayed with pictures

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <h3>The time is:</h3>
 
-
+    <img id=1 width="500" height="600">
+    <img id=2 width="500" height="600">
+    <img id=3 width="500" height="600">
+    <img id=4 width="500" height="600">
 
     <script src="./frontpage.js"></script>
 </body>
