--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <img id=1 width="250" height="300">
     <img id=2 width="250" height="300">
+    <img src="images/Colon.png" height="300">
     <img id=3 width="250" height="300">
     <img id=4 width="250" height="300">
 
